# NNCNN4SegAEP

src/: CMakeLists.txt
src/NNCNN4Seg/: NNCNNLabeler.cpp
src/NNCNN4Seg/model/: ComputionGraph.h
src/NNCNN4SegA/: NNCNNLabeler.cpp
src/NNCNN4SegA/model/: ComputionGraph.h  ModelParams.h
src/NNCNN4SegEX/: CMakeLists.txt  NNCNNLabeler.cpp  NNCNNLabeler.h
src/NNCNN4SegEX/model/: ComputionGraph.h  HyperParams.h  ModelParams.h
src/NNCNN4SegReluAvgPool/model/: ComputionGraph.h
src/NNCNN4SegReluMaxPool/model/: ComputionGraph.h  ModelParams.h
src/NNCNN4SegReluMaxPoolA/: NNCNNLabeler.cpp  NNCNNLabeler.h
src/NNCNN4SegReluMaxPoolA/model/: ComputionGraph.h  HyperParams.h  ModelParams.h
src/NNCNN4SegReluMaxPoolAE/: NNCNNLabeler.cpp  NNCNNLabeler.h
src/NNCNN4SegReluMaxPoolAE/model/: ComputionGraph.h  ModelParams.h
src/NNCNN4SegReluMaxPoolAEP/model/: ModelParams.h
src/NNCNN4SegReluMaxPoolAEPH/: CMakeLists.txt
src/NNCNN4SegReluMaxPoolAEPH/model/: ComputionGraph.h  HyperParams.h
src/NNCNN4SegReluMaxPoolAEPHRelu/model/: ComputionGraph.h
src/NNCNN4SegReluMaxPoolAEPHSigmoid/model/: ComputionGraph.h
src/NNCNN4SegReluMaxPoolAEPHTanh/model/: ComputionGraph.h
src/NNCNN4SegReluMinPool/model/: ComputionGraph.h  HyperParams.h
src/NNCNN4SegReluTriPool/model/: ComputionGraph.h
src/NNCNN4SegSigmoidMaxPool/model/: ComputionGraph.h
src/NNCNN4SegTanhAvgPool/: CMakeLists.txt
src/NNCNN4SegTanhAvgPool/model/: ComputionGraph.h
src/NNCNN4SegTanhMinPool/: CMakeLists.txt
src/basic/: Instance.h  InstanceReader.h  InstanceWriter.h  Options.h
(+4 files in other folders)
